@@ -1,4 +1,11 @@
 
+2018-03-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* screenio.c, common.h: fixed bug #500 CBL_READ_KBD_CHAR not
+	  returning a value and characters being shown instead of hidden
+	* screenio.c: added missing screenio initializations in external
+	  library routines
+
 2018-03-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* common.c: added Tiny C version info
